--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ composeIcon = "1.7.6"
 coreKtx = "1.13.1"
 coroutines = "1.6.4"
 datastore = "1.1.2"
+gson = "2.11.0"
 lifecycleRuntimeKtx = "2.8.7"
 koinBom = "3.6.0-wasm-alpha2"
 material3 = "1.3.1"
@@ -48,6 +49,9 @@ koin-android = { module = "io.insert-koin:koin-android" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koinBom" }
 koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "kotlin" }
 koin-core = { module = "io.insert-koin:koin-core" }
+
+#gson
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 #material
 material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3" }
